--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
+pom.xml
+pom.xml.asc
+/tmp
 /target
+/lib
 /classes
 /checkouts
 pom.xml
 pom.xml.asc
+Icon?
 *.jar
 *.class
+*.swp
+*.swo
+filetag.sh
+filenametags
 /.lein-*
 /.nrepl-port
-.hgignore
-.hg/
+*.plist
